# custom_identity_platform

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 2134a60ab281_rename_session_model_to_usersession.py  2a7d2762dcf2_add_rbac_models.py  326ed2740ad2_add_mfa_secret_column_to_users_table.py  3d78d9e88794_create_users_table.py  5357d59587f0_add_audit_logs_table.py  671ffe10a0a5_add_oauth_clients_and_authorization_.py  72c818a3c167_add_refresh_token_hash_column_for_.py  760d5a55feeb_describe_change.py  a88af334d4ac_enhance_session_model_for_refresh_tokens.py  c10b7eac4813_add_user_id_foreign_key_to_sessions.py  c9859df57d16_add_rbac_tables.py  d57521d719b6_add_roles_permissions_sessions.py  d7a90169b2b5_add_refresh_token_rotation_revocation_.py  de5283658dd6_add_rbac_models.py  eebd1ca04a24_add_oauth_clients_and_authorization_.py  ffb1a560b760_add_nullable_user_profile_fields.py
app/: config.py  database.py  main.py
app/core/: dependencies.py  security.py  utils.py
app/crud/: oauth_crud.py  user_crud.py
app/models/: __init__.py  audit.py  oauth.py  rbac.py  user.py
app/routes/: admin.py  auth.py  authorize.py  callback.py  jwks.py
app/schemas/: user.py
app/utils/: audit.py  auth.py  seed_oauth_client.py  seed_or_update_oauth_client.py  seed_rbac.py  update_redirect_uris.py
tests/: conftest.py  test_auth.py
