[project]
name = "custom_identity_platform"
version = "0.1.0"
description = "Custom identity platform using Python"
authors = [
    {name = "Henry Mbugua",email = "82150047+henrymbuguakiarie@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (==1.7.4)",
    "authlib (>=1.6.5,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "email-validator (>=2.2.0,<3.0.0)",
    "bcrypt (==4.0.1)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pyotp (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]
[tool.poetry]
package-mode = true
packages = [
    { include = "app" }
]


